fix landing page preview spacing issues

--- a/app/styles/view-specific/creator/landing-page/_landing-page.scss
+++ b/app/styles/view-specific/creator/landing-page/_landing-page.scss
@@ -64,7 +64,7 @@ $panel-margin-bottom:40px;
       background:$white-full;
       @media (min-width:$screen-sm-min) {
         width:10%;
-        margin:1.2em;
+        margin:15px;
         border-width:3px;
       }
       img {
@@ -97,6 +97,12 @@ $panel-margin-bottom:40px;
       font-size:20px;
       @media (min-width:$screen-s-min) {
         font-size:24px;
+      }
+    }
+    > h2,
+    > h3 {
+      @media (min-width:$screen-sm-min) {
+        display:none;
       }
     }
   }
